--- a/src/app/teams-all/teams-all.component.html
+++ b/src/app/teams-all/teams-all.component.html
@@ -13,12 +13,12 @@
 
                 <ng-container matColumnDef="id_player_1">
                     <th mat-header-cell *matHeaderCellDef>Player 1</th>
-                    <td mat-cell *matCellDef="let element">{{element.id_player_1 ? element.id_player_1 : "&lt;Free&gt;"}}</td>
+                    <td mat-cell *matCellDef="let element">{{element.id_player_1 ? "Full" : "&lt;Free&gt;"}}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="id_player_2">
                     <th mat-header-cell *matHeaderCellDef>Player 2</th>
-                    <td mat-cell *matCellDef="let element">{{element.id_player_2 ? element.id_player_2 : "&lt;Free&gt;"}}</td>
+                    <td mat-cell *matCellDef="let element">{{element.id_player_2 ? "Full" : "&lt;Free&gt;"}}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
