--- a/src/app/teams-one-dialog/teams-one-dialog.component.html
+++ b/src/app/teams-one-dialog/teams-one-dialog.component.html
@@ -4,7 +4,7 @@
 <div mat-dialog-actions>
     <div *ngIf="true">
         <p>Do you want to delete this team?</p>
-        <button mat-raised-button (click)="close()">No</button>
-        <button mat-raised-button color="primary" (click)="delete()" style="float: right;">Yes</button>
+        <button mat-raised-button >No</button>
+        <button mat-raised-button color="primary" style="float: right;">Yes</button>
     </div>
 </div>
