--- a/src/app/tournaments-create/tournaments-create.component.html
+++ b/src/app/tournaments-create/tournaments-create.component.html
@@ -39,7 +39,7 @@
 
                 <mat-form-field class="example-full-width">
                     <mat-label>Type selection</mat-label>
-                    <mat-select [(value)]="singles" formControlName="is_singles">
+                    <mat-select formControlName="is_singles">
                         <mat-option value="true">Singles</mat-option>
                         <mat-option value="false">Doubles</mat-option>
                     </mat-select>
@@ -48,7 +48,7 @@
 
                 <mat-form-field class="example-full-width">
                     <mat-label>Gender selection</mat-label>
-                    <mat-select [(value)]="gender" formControlName="type">
+                    <mat-select formControlName="type">
                         <mat-option value="M">Men</mat-option>
                         <mat-option value="W">Women</mat-option>
                         <mat-option value="MW">Mixed</mat-option>
@@ -58,7 +58,7 @@
 
                 <mat-form-field class="example-full-width">
                     <mat-label>Capacity</mat-label>
-                    <mat-select [(value)]="capacity" formControlName="capacity">
+                    <mat-select formControlName="capacity">
                         <mat-option [value]="2">2</mat-option>
                         <mat-option [value]="4">4</mat-option>
                         <mat-option [value]="8">8</mat-option>
