--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -5,7 +5,7 @@
                 <mat-card-header>
                     <div mat-card-avatar class="own"></div>
                     <mat-card-title>Statistics</mat-card-title>
-                    <mat-card-subtitle>Overall statistics (every column can can be sorted)</mat-card-subtitle>
+                    <mat-card-subtitle>Overall statistics (every column can be sorted)</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
                     <mat-tab-group>
