--- a/src/app/edit/edit.component.scss
+++ b/src/app/edit/edit.component.scss
@@ -1,14 +1,21 @@
-.example-full-width {
-  width: 100%;
+:host {
+  display: flex;
+  justify-content: center;
+  margin: 100px 0px;
 }
 
-.create-form {
-  min-width: 150px;
-  max-width: 600px;
+.mat-form-field {
   width: 100%;
+  min-width: 300px;
 }
 
-.example-header-image {
-  background-image: url('../../assets/icons/outline_account_circle_black_36dp.png');
-  background-size: cover;
+mat-card-title,
+mat-card-content {
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  display: flex;
+  justify-content: flex-end;
 }
