--- a/src/app/tournaments-tree-match/tournaments-tree-match.component.scss
+++ b/src/app/tournaments-tree-match/tournaments-tree-match.component.scss
@@ -1,3 +1,17 @@
 .filler {
     flex: 1 1 auto;
- }
+}
+
+mat-card {
+    margin-bottom: 20px;
+}
+
+.match-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+}
+
+.example-full-width {
+    width: 100%;
+}
