--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -2,7 +2,7 @@
     <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>You're logged as {{usrnm}}</mat-card-title>
-        <mat-card-subtitle>We'd like to know more about you!<button [routerLink]="'/edit'" mat-raised-button>Edit Profile</button>
+        <mat-card-subtitle>Do you want to edit your profile?<br><button class="mt-2" [routerLink]="'/edit'" mat-raised-button>Settings</button>
         </mat-card-subtitle>
     </mat-card-header>
 </mat-card>
