settings redirect gender not specified

--- a/src/app/success/success.component.scss
+++ b/src/app/success/success.component.scss
@@ -6,3 +6,13 @@
   background-image: url('../../assets/icons/outline_account_circle_black_36dp.png');
   background-size: cover;
 }
+
+.center {
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 10px;
+}
+
+.full-height {
+  height: 90%;
+}
