--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,8 +1,10 @@
-<mat-card class="example-card">
-    <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>You're logged as {{usrnm}}</mat-card-title>
-        <mat-card-subtitle>Do you want to edit your profile?<br><button class="mt-2" [routerLink]="'/edit'" mat-raised-button>Settings</button>
-        </mat-card-subtitle>
-    </mat-card-header>
-</mat-card>
+<div>
+    <mat-card class="example-card center">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>You're logged as {{usrnm}}</mat-card-title>
+            <mat-card-subtitle>Do you want to edit your profile?<br><button class="mt-2" [routerLink]="'/edit'" mat-raised-button>Settings</button>
+            </mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
+</div>
