match result security, team check and more

--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="full-height">
     <mat-card class="example-card center">
         <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
