--- a/src/app/tournaments-one/tournaments-one.component.html
+++ b/src/app/tournaments-one/tournaments-one.component.html
@@ -20,6 +20,7 @@
                                 <mat-list-item><b>Date To: </b>{{data ? data.date_to : ""}}</mat-list-item>
                                 <mat-list-item><b>Prize: </b>{{data ? data.prize : ""}} €</mat-list-item>
                                 <mat-list-item><b>Register cost: </b>{{data ? data.cost : ""}} €</mat-list-item>
+                                <mat-list-item><b>Staff: </b>{{staff_name ? staff_name.name+" "+staff_name.surname : ""}}</mat-list-item>
                                 <mat-list-item><b>Sponsors: </b>{{data ? data.sponsors : ""}}</mat-list-item>
                             </mat-list>
                         </div>
